--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Start Over Tamale Order</title>
-    <link rel="stylesheet" href="StartOverstyles.css" />
+    <link rel="stylesheet" href="styles.css" />
     <link rel="icon" href="images/favicon-32x32.png" type="image/png" />
-    <link rel="manifest" href="StartOvermanifest.json" />
+    <link rel="manifest" href="/manifest.json" />
   </head>
   <body>
     <div class="container">
@@ -74,24 +74,6 @@
       </div>
     </div>
 
-    <script src="StartOvermain.js"></script>
-
-    <script>
-      if ("serviceWorker" in navigator) {
-        window.addEventListener("load", () => {
-          navigator.serviceWorker
-            .register("/StartOverservice-worker.js")
-            .then((registration) => {
-              console.log(
-                "ServiceWorker registration successful with scope: ",
-                registration.scope
-              );
-            })
-            .catch((error) => {
-              console.log("ServiceWorker registration failed: ", error);
-            });
-        });
-      }
-    </script>
+    <script src="main.js"></script>
   </body>
 </html>
